--- a/admissions.html
+++ b/admissions.html
@@ -148,6 +148,7 @@ body {
                 width: 100%;
                 background: #004080;
                 text-align: center;
+                z-index: 1000; 
             }
             .nav-links.show {
                 display: flex;
