--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                 width: 100%;
                 background: #004080;
                 text-align: center;
+                z-index: 1000; 
             }
             .nav-links.show {
                 display: flex;
