--- a/teachers.html
+++ b/teachers.html
@@ -147,6 +147,7 @@ body {
                 width: 100%;
                 background: #004080;
                 text-align: center;
+                z-index: 1000; 
             }
             .nav-links.show {
                 display: flex;
