--- a/admissions.html
+++ b/admissions.html
@@ -143,7 +143,7 @@ body {
                 display: none;
                 flex-direction: column;
                 position: absolute;
-                top: 100%;
+                top: 270px;
                 left: 0;
                 width: 100%;
                 background: #004080;
