--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 display: none;
                 flex-direction: column;
                 position: absolute;
-                top: 100%;
+                top: 270px;
                 left: 0;
                 width: 100%;
                 background: #004080;
